Problem of whitespace left at bottom in home and contact page is solved

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,3 @@
-/* @font-face {
-    font-family: 'ChalkStick';
-    src: url('../assets/fonts/ChalkStick-WjAv.ttf') format('truetype');
-} */
-
 @font-face {
     font-family: 'StylishMarker';
     src: url('../assets/fonts/StylishMarker-OXYo.ttf') format('truetype');
@@ -16,11 +11,22 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+}
+
 #content {
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     padding: 1rem;
     font-family: 'StylishMarker';
+    background-color: #999;
 }
 
 #menu-buttons {
@@ -59,9 +65,10 @@ button {
 }
 
 #page-content-container {
+    flex: 1 1 auto;
     padding: 10px;
     display: grid;
-    grid-template-columns: repeat(1, minmax(250px, 0.5fr));
+    grid-template-columns: repeat(1, minmax(400px, 0.5fr));
     place-content: center;
     gap: 10px;
     font-size: 1.5rem;
@@ -70,14 +77,14 @@ button {
 .category {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    /* gap: 10px; */
     padding: 0.75rem;
 }
 
 .pageItems {
     background-color: #333;
     color: white;
-    padding: 1.5rem;
+    padding: 1rem;
 }
 
 h1,
@@ -92,15 +99,22 @@ p {
 }
 
 h1 {
-    font-size: 2.5em;
+    font-size: 2.75em;
+    background-color: #333;
+    color: lightblue;
+    margin-bottom: 25px;
 }
 
 h2 {
     font-size: 2.0em;
+    background-color: #333;
+    color: lightgreen;
+    padding-top: 0.5rem;
 }
 
 h3 {
     font-size: 1.75em;
+    color: lightpink;
 }
 
 p {
@@ -110,6 +124,7 @@ p {
 h4 {
     font-size: 1.25em;
     padding-left: 50px;
+    color: orange;
 }
 
 
